--- a/src/mzkit/mzkit/My Project/Resources.resx
+++ b/src/mzkit/mzkit/My Project/Resources.resx
@@ -130,6 +130,9 @@
   <data name="logo_2x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo@2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="preferences_system_notifications" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Res\preferences-system-notifications.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="RE4As8m" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RE4As8m.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
